crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__function_call_arity_mismatch_too_few.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/function_call_arity_mismatch_too_few.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: arity error: `<function function_name at [POINTER]>` expects 1 args but 0 args were passed
   ╭─[tests/cases/function_call_arity_mismatch_too_few.lox:3:1]
   │
 3 │ function_name();
   │ ──────┬──────  
   │       ╰──────── expects 1 arguments
───╯
